--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 	</main>
 	<!--- KRAJ Kontakt -->
 
-	<footer class="centriranje">
+	<footer>
 		<div id="copyright">
 			<p>
 				&copy; Stefan Mihajlov 2012/23
