--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 	</main>
 	<!--- klijent kraj --->
 	<!--- footer --->
-	<footer class="centriranje">
+	<footer>
 		<div id="copyright">
 			<p>
 				&copy; Stefan Mihajlov 2012/23
