--- a/o-autoru.html
+++ b/o-autoru.html
@@ -57,7 +57,7 @@
 	<!--<hr class="linija-odvajanje" /> --!>
 		<!--- kraj o meni podaci -->
 	<!--- footer --->
-	<footer class="centriranje">
+	<footer>
 		<div id="copyright">
 			<p>
 				&copy; Stefan Mihajlov 2012/23
