--- a/programi.html
+++ b/programi.html
@@ -101,7 +101,7 @@
 		</div>
 	</main>
 	<!--- footer --->
-			<footer class="centriranje">
+			<footer>
 				<div id="copyright">
 					<p>
 						&copy; Stefan Mihajlov 2012/23
