--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
 		</div>
 	</main>
 	<!--- footer --->
-	<footer class="centriranje">
+	<footer>
 		<div id="copyright">
 			<p>
 				&copy; Stefan Mihajlov 2012/23
