--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 	<main>
 		<div class="centriranje-kontakt">
 			<div class="kontakt-forma">
-				<form action="action_page.php">
+				<form action="action_page.php" method="POST">
 
 					<label for="ime">Ime</label>
 					<input type="text" id="ime" name="ime" placeholder="Vase ime">
