--- a/index.html
+++ b/index.html
@@ -57,21 +57,20 @@
 					<i class="fas fa-running ponude-ikonice"></i>
 					<p><span class="razmak-h2">KONDICIONA PRIPREMA SPORTISTA</span><br/>
 					U našem timu se nalazi značajan broj stručnjaka koji će predstavljati po našem mišljenju sadašnjost i budućnost kondicionog treninga. Našim metodom rada dolazi do porasta aerobnih i anaerobnih sposobnosti, razvoja snage mišića sa ili bez povećanja mase mišića (zavisno od potreba datog sporta), kao i do unapređenja fleksibilnosti. 
-					Drugim rečima, primenom naše metode rada sportisti dostižu visok nivo bazičnih fizičkih kvaliteta.</p>
+					</p>
 				</div>
 				<div class="ponuda ponuda-sredina">
 					<i class="fas fa-dumbbell ponude-ikonice"></i>
 					<p><span id="centar-text" class="razmak-h2">HIPERTROFIJA</span><br/>
 					Povećanje poprečnog preseka mišića, odnosno mišićna hipertrofija primarni je cilj većine vežbača kada prvi put dođu u neki fitnes centar. 
-					Takođe i profesionalnih sportista, pogotovo onih koji se bave sportovima u kojima dominira neki oblik snage.Hipertrofija nastaje kao rezultat adaptacije organizma na “stres”kojem izlažemo naš organizam prilikom treninga. Telo na stres reaguje prvo alarmom,
-					zatim adaptaciom na nastale okolnosti i na kraju poboljšanjem sposobnosti kako bi spremno dočekalo sledeći trening.</p>
+					Takođe i profesionalnih sportista, pogotovo onih koji se bave sportovima u kojima dominira neki oblik snage.Hipertrofija nastaje kao rezultat adaptacije organizma na “stres”kojem izlažemo naš organizam prilikom treninga.</p>
 				</div>
 				<div class="ponuda ponuda-float-right">
 					<i class="fas fa-heartbeat ponude-ikonice"></i>
 					<p><span class="razmak-h2">KOREKCIJA TELESNIH DEFORMITETA</span><br/>
 					Morfološke promene lokomotornog aparata koje propagiraju veće ili manje funkcionalne smetnje nazivamo telesnim deformitetima. 
-					Najčešći telesni deformiteti su deformiteti kičmenog stuba tj. lordoza, skolioza, kifoza, ravna leđa, zatim deformiteti grudnog koša kao što su ispupčene grudi, izdubljene grudi, ravne grudi i tu su deformiteti donjih ekstremiteta takozvane ”X” i ”O” noge, ravna stopala, rasplinuto stopalo. 
-					Telesni deformiteti se najčešće stiču u periodu rasta i razvoja čoveka. Tačni uzroci nastanka deformiteta su nepoznati. 
+					Najčešći telesni deformiteti su deformiteti kičmenog stuba tj. lordoza, skolioza, kifoza, ravna leđa, zatim deformiteti grudnog koša kao što su ispupčene grudi, izdubljene grudi, ravne grudi i tu su deformiteti donjih ekstremiteta. 
+					 
 					</p>
 				</div>
 			</div>
@@ -122,6 +121,7 @@
 					<p>"Treninzi su zabavni, kolege članovi su inspirativni, treninge vode lični treneri koji daju trenutne povratne informacije i prilagođavanja tokom treninga i baš pravu količinu ohrabrenja. Muzika trešti i atmosfera je sjajna. Nećete raditi isti trening dva puta, a ako odete, videćete rezultate bez sumnje. To je doživljaj teretane koji menja život i toplo ga preporučujem svim svojim prijateljima i porodici."</p>
 				</div>
 			</div>
+			
 			<div class="cleaner">
 			</div>
 		</div>
